[tool.poetry]
name = "py-fin-dash"
version = "0.1.0"
description = "My python financial dashboard"
authors = ["ebat79 <ebat79@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
yfinance = "^0.2.44"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
